# damien_mcp_server

./: .env.example  .gitignore  ANTHROPIC_CONSOLE_SETUP.md  DAMIEN_VS_DESKTOP_COMMANDER.md  DEPLOYMENT_GUIDE.md  README.md  SMITHERY_SETUP.md  damien-dynamodb-policy.json  pyproject.toml  test_dynamodb.py
app/: main.py
app/core/: config.py  security.py
app/dependencies/: __init__.py  dependencies.py  dependencies_service.py
app/models/: __init__.py  mcp_protocol.py  tools.py
app/routers/: tools.py
app/services/: damien_adapter.py  dynamodb_service.py
docs/: DAMIEN_MCP_OPTIMIZATION_PLAN.md
tests/: conftest.py
tests/core/: test_config.py  test_security.py
tests/models/: test_mcp_protocol.py  test_tools.py
tests/routers/: test_tools.py
tests/services/: test_damien_adapter.py  test_dynamodb_service.py
tools/: NGROK_GUIDE.md  generate_schemas.py  test_mcp.py  tunnel.py
tools/schemas/: README.md  damien_add_rule.json  damien_all_tools.json  damien_apply_rules.json  damien_delete_emails_permanently.json  damien_delete_rule.json  damien_get_email_details.json  damien_label_emails.json  damien_list_emails.json  damien_list_rules.json  damien_mark_emails.json  damien_trash_emails.json
